# local-doc-search

./: .gitignore  README.md  pyproject.toml
docs/: technical_spec.md
src/local_doc_search/: __init__.py  benchmark.py  cli.py  client.py  codex_history.py  db.py  embeddings.py  indexer.py  mcp.py  reload.py  search.py  server.py
src/tt_search/: __init__.py  cli.py  client.py  codex_history.py  db.py  embeddings.py  indexer.py  mcp.py  search.py  server.py
tests/: test_tt_search.py
