[project]
name = "tt-search"
version = "0.1.0"
description = "Local Japanese text search CLI using SQLite FTS5 trigram and sqlite-vec."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "rich>=13.7",
    "sentencepiece>=0.2",
    "sentence-transformers>=2.7",
    "sqlite-vec>=0.1.6",
    "typer>=0.12",
]

[project.scripts]
tt-search = "tt_search.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
