[project]
name = "local-doc-search"
version = "0.1.0"
description = "Local multilingual text search CLI using SQLite FTS5 trigram and sqlite-vec."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "rich>=13.7",
    "sentencepiece>=0.2",
    "sentence-transformers>=2.7",
    "sqlite-vec>=0.1.6",
    "typer>=0.12",
]

[project.scripts]
local-doc-search = "local_doc_search.cli:app"

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.2",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_doc_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src/local_doc_search", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportPrivateImportUsage = false
